<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    tools:context=".EventActivity">
    <TextView
        android:id="@+id/eventoEditTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_black_italic"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:text="@string/label_event_information"
        android:textColor="#292929"
        android:textSize="44dp">

    </TextView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="15dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:background="@drawable/event_stripped_light_style">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventoEditNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_event_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventoEditName"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventoEditCityLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_event_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventoEditCity"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventoEditStartDateLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_event_startDate"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="90dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventoEditNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventoEditStartDate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventoEditEndDateLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:hint="@string/hint_event_endDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventoEditStartDateLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventoEditEndDate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/eventoEditStartDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/label_eventoStart"
            android:textColor="@color/primaryTextColor"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventoEditNameLayout"></TextView>
        <TextView
            android:id="@+id/eventoEditEndDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/label_eventoEnd"
            android:textSize="20dp"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="@font/raleway_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventoEditStartDateText">
        </TextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eventoEditOkBtn"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/label_eventoOk"
            app:icon="@drawable/baseline_done_24"
            app:iconGravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventoEditCityLayout">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/eventoEditCancelBtn"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:backgroundTint="@color/redAlternative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_eventoCancel"
            app:icon="@drawable/baseline_cancel_24"
            app:iconGravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventoEditOkBtn">
        </com.google.android.material.button.MaterialButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>