<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-87dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            tools:context=".RegisterActivity">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="343dp"
                android:layout_height="128dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/km_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Campo name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/hint_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regName"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/lato_regular"
                    android:inputType="textEmailAddress"
                    tools:layout_editor_absoluteX="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo surname -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regSurnameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_surname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regSurname"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/lato_regular"
                    android:inputType="textEmailAddress"
                    tools:layout_editor_absoluteX="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Spinner Countries -->
            <Spinner
                android:id="@+id/regCountry"
                style="@style/spinner"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/lato_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regSurnameLayout" />

            <!-- Campo city -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regCityLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regCountry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regCity"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/lato_regular"
                    android:inputType="textEmailAddress"
                    tools:layout_editor_absoluteX="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo username -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regUserNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/hint_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regCityLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regUserName"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/lato_regular"
                    android:inputType="textEmailAddress"
                    tools:layout_editor_absoluteX="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regUserNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/lato_regular"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/regBtnSignup"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/label_signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/regPasswordLayout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/regBtnCancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/label_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/regBtnSignup" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>