<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    tools:context=".EventActivity">
    <TextView
        android:id="@+id/eventoInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_black_italic"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:text="@string/label_event_information"
        android:textColor="#292929"
        android:textSize="44dp">

    </TextView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:background="@drawable/event_stripped_light_style">
        <TextView
            android:id="@+id/eventoInfoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Karate 1-Premier League"
            android:textSize="22dp"
            android:textColor="#292929"
            android:fontFamily="@font/lato_black_italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>
        <TextView
            android:id="@+id/eventoInfoCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/lato_regular"
            android:text="Madrid, España"
            android:textSize="18dp"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>
        <TextView
            android:id="@+id/eventoInfoStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Empieza: 10-1-2020"
            android:textSize="20dp"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="@font/raleway_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventoInfoName">
        </TextView>
        <TextView
            android:id="@+id/eventoInfoEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="Termina: 12-1-2020"
            android:textSize="20dp"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="@font/raleway_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventoInfoStartDate">
        </TextView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/eventoInfoEditBtn"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/mnu_edit"
            app:icon="@drawable/baseline_create_24"
            app:iconGravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventoInfoCity">
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/eventoInfoDeleteBtn"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:backgroundTint="@color/redAlternative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mnu_delete"
            app:icon="@drawable/baseline_delete_24"
            app:iconGravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventoInfoEditBtn">
        </com.google.android.material.button.MaterialButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/eventoInfoStrategiesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_black_italic"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:text="@string/label_event_strategies"
        android:textColor="#292929"
        android:textSize="44dp">

    </TextView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/eventoInfoStrategiesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">
        </androidx.recyclerview.widget.RecyclerView>
        <TextView
            android:id="@+id/eventoInfoStrategiesInfo"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:layout_marginTop="30dp"
            android:textSize="17dp"
            android:gravity="center"
            android:textColor="@color/primaryTextColor"
            android:text="@string/info_loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/eventoInfoStrategiesCreateBtn"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/baseline_add_24"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>