<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    tools:context=".StrategyActivity">
    <TextView
        android:id="@+id/strategyEditTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_black_italic"
        android:gravity="center"
        android:text="@string/label_strategy_information"
        android:textColor="#292929"
        android:textSize="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/strategyEditLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/event_stripped_light_style"
        android:layout_marginTop="8dp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/strategyEditTitle"
        tools:layout_editor_absoluteX="0dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/strategyEditTargetLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_strategy_target"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/strategyEditTarget"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/strategyEditCategory"
            style="@style/spinner"
            android:layout_width="140dp"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/strategyEditDescLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_strategy_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/strategyEditCategory">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/strategyEditDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/strategyBackBtn"
        style="@style/strategyBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/strategyEditOkBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/strategyEditOkBtn"
        style="@style/strategyEditBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/strategyEditCancelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_done_24"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/strategyEditCancelBtn"
        style="@style/strategyDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_cancel_24"/>
</androidx.constraintlayout.widget.ConstraintLayout>